--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
         <button class="btn" onclick="openModal(1)">View Details</button>
       </div>
       <div class="event-card">
-        <img src="WEDDING.jpg" alt="Event 1">
+        <img src="images/pexels-am83-14636319.jpg" alt="Event 1">
         <p>Wedding - May 15</p>
         <button class="btn" onclick="openModal(1)">View Details</button>
       </div>
