--- a/events.html
+++ b/events.html
@@ -19,7 +19,7 @@
   <!-- Featured Event -->
   <section class="featured-event">
     <h1>Featured: Summer Gala</h1>
-    <img src="images/pexels-am83-14636319.jpg" alt="Event 1">
+    <img src="images/pexels-am83-14636319.jpg" alt="Event 1" id="asd">
     <p>June 25, 2025</p>
   </section>
 
