--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Event Planner</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .Gb{
+      height:500px;
+      width:500px;
+
+
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -17,7 +25,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section style="height: 100vh; background: url('images/pexels-am83-14636319.jpg') center/cover; text-align: center; padding-top: 15rem; color: white;">
+  <section  class="Gb"style="height: 100vh; background: url('images/pexels-am83-14636319.jpg') center/cover; text-align: center; padding-top: 15rem; color: white;">
     <h1>Plan. Celebrate. Remember.</h1>
     <a href="booking.html" class="btn">Get Started</a>
   </section>
